--- a/assets/css/ogency.css
+++ b/assets/css/ogency.css
@@ -4392,7 +4392,7 @@ h6 {
 .about-one {
   position: relative;
   background: var(--ogency-black);
-  padding: 0 0 113px;
+  padding: 113px 0 113px;
 }
 
 @media (max-width: 991px) {
@@ -4995,6 +4995,9 @@ h6 {
   position: relative;
   background-color: var(--ogency-black2);
   padding: 40px 50px 33px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 @media (min-width: 992px) and (max-width: 1199px) {
@@ -5056,6 +5059,7 @@ h6 {
   margin: 0 0 9px;
   padding: 0 0 24px;
   border-bottom: 1px solid RGBA(var(--ogency-white-rgb), 0.1);
+  flex-grow: 1;
 }
 
 .service-one__item__btn {
