--- a/assets/css/ogencyblue.css
+++ b/assets/css/ogencyblue.css
@@ -2036,8 +2036,7 @@ h6 {
 }
 
 .main-menu__nav {
-  padding-left: 214px;
-}
+  padding-left: 354px;}
 
 @media (max-width: 1199px) {
   .main-menu__nav {
