--- a/assets/css/ogency.css
+++ b/assets/css/ogency.css
@@ -2036,7 +2036,7 @@ h6 {
 }
 
 .main-menu__nav {
-  padding-left: 214px;
+  padding-left: 354px;
 }
 
 @media (max-width: 1199px) {
@@ -4191,12 +4191,15 @@ h6 {
 .feature-one__item__img {
   position: relative;
   background-color: var(--ogency-black);
+  height: 600px; /* Cambia este valor según el diseño */
+  overflow: hidden; /* Asegura que las imágenes no se salgan del contenedor */
 }
 
 .feature-one__item__img img {
-  width: 100%;
-  height: auto;
-  mix-blend-mode: luminosity;
+    width: 100%;
+    height: 100%; /* La imagen llenará el contenedor */
+    object-fit: cover; /* Asegura que la imagen se recorte adecuadamente */
+    mix-blend-mode: luminosity; /* Mantén esto si deseas el efecto */
 }
 
 .feature-one__item__content {
@@ -5726,7 +5729,7 @@ h6 {
 }
 
 .project-two--page {
-  padding: 120px 0 90px;
+  padding: 12px 0 90px;
 }
 
 @media (max-width: 767px) {
@@ -6062,8 +6065,8 @@ h6 {
 
 .team-one__item__links {
   position: absolute;
-  right: 20px;
-  top: 20px;
+  right: 0px;
+  top: 0px;
   width: 47px;
   height: 44px;
   display: flex;
@@ -6076,7 +6079,7 @@ h6 {
 
 .team-one__item__social {
   position: absolute;
-  right: 20px;
+  right: 0px;
   bottom: 76px;
   width: 47px;
   background-color: var(--ogency-white);
