--- a/assets/css/ogencyblue.css
+++ b/assets/css/ogencyblue.css
@@ -2088,7 +2088,6 @@ h6 {
   align-items: center;
   color: var(--ogency-white);
   font-weight: 600;
-  text-transform: capitalize;
   position: relative;
   transition: all 500ms ease;
 }
@@ -4391,7 +4390,7 @@ h6 {
 .about-one {
   position: relative;
   background: var(--ogency-black);
-  padding: 113px 0 113px;
+  padding: 10px 0 113px;
 }
 
 @media (max-width: 991px) {
@@ -4422,7 +4421,7 @@ h6 {
 
 .about-one__thumb__img {
   background-color: var(--ogency-black);
-  border-radius: 50%;
+  border-radius: 100%;
   display: inline-block;
   overflow: hidden;
   position: relative;
@@ -4474,6 +4473,7 @@ h6 {
 
 .about-one__content__text-one {
   margin: 0;
+  font-size: 20px;
 }
 
 .about-one__content__text-two {
