--- a/assets/css/ogency.css
+++ b/assets/css/ogency.css
@@ -2089,7 +2089,6 @@ h6 {
   align-items: center;
   color: var(--ogency-white);
   font-weight: 600;
-  text-transform: capitalize;
   position: relative;
   transition: all 500ms ease;
 }
@@ -5295,7 +5294,7 @@ h6 {
 }
 
 .service-three--service-page {
-  padding: 80px 0 70px;
+  padding: 0px 0 70px;
 }
 
 @media (max-width: 767px) {
@@ -5399,7 +5398,7 @@ h6 {
   width: 100%;
   height: 100%;
   z-index: 2;
-  padding: 53px 60px 50px;
+  padding: 53px 40px 50px;
   visibility: hidden;
   opacity: 0;
   -webkit-animation-duration: .6s;
@@ -6050,7 +6049,7 @@ h6 {
   display: block;
   font-size: 14px;
   line-height: 1;
-  margin-bottom: 4px;
+  margin-top: 6px;
 }
 
 .team-one__item__title {
