--- a/assets/css/ogencyblue.css
+++ b/assets/css/ogencyblue.css
@@ -2036,7 +2036,7 @@ h6 {
 }
 
 .main-menu__nav {
-  padding-left: 354px;}
+  padding-left: 254px;}
 
 @media (max-width: 1199px) {
   .main-menu__nav {
@@ -2053,7 +2053,7 @@ h6 {
 .main-menu .main-menu__list ul,
 .stricky-header .main-menu__list,
 .stricky-header .main-menu__list ul {
-  margin: 0;
+  margin-bottom: 42px;
   padding: 0;
   list-style-type: none;
   align-items: center;
@@ -4431,7 +4431,7 @@ h6 {
   max-width: 100%;
   height: auto;
   mix-blend-mode: luminosity;
-  transition: all 500ms ease;
+  transition: all 5000ms ease;
 }
 
 .about-one__thumb__round--bottom {
