--- a/assets/css/ogency.css
+++ b/assets/css/ogency.css
@@ -8328,7 +8328,7 @@ h6 {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  background-image: url(../images/backgrounds/page-header-bg-1-1.jpg);
+  background-image: url(../images/home/banner/Principal.png);
 }
 
 .page-header__overlay {
